  - frames_rt_toref       -> rt_ref_frame
  - frames_Rt_toref       -> Rt_ref_frame
  
  This applies to the mrcal.cameramodel() constructor arguments and accessor
  functions. And to the mrcal.optimize() and mrcal.optimizer_callback() calls and
  to the contents of the optimization_inputs dict and the pywrap stuff.
  
  Compatibility logic is in place, so old code and data should just work


* Migration notes 2.4 -> 3.0

2024-12-06 compose_r(), compose_rt(), compose_Rt() have new args:
  inverted0,inverted1 BREAKING C ABI,API change: mrcal_compose_..._full() take
  the two new arguments. And mrcal_compose_rt_full() returns dt01/dr1 and
  dt01/dt0. The mrcal_compose_r(), mrcal_compose_rt() macros and the Python
  functions maintain the same interface

* todo
- Old tools complain about new keywords:

  #+begin_example
mrcal-show-geometry --show-points /tmp/models-noisesample0-camera0.cameramodel
Traceback (most recent call last):
  File "/usr/bin/mrcal-show-geometry", line 186, in <module>
    plot = mrcal.show_geometry(models,
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3/dist-packages/mrcal/visualization.py", line 446, in show_geometry
    points = get_points_to_plot()
             ^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3/dist-packages/mrcal/visualization.py", line 416, in get_points_to_plot
    mrcal.corresponding_icam_extrinsics(icam_intrinsics,
TypeError: 'do_apply_regularization_unity_cam01' is an invalid keyword argument for mrcal.corresponding_icam_extrinsics()
  #+end_example

- add notes about the triangulated-points merge

- new observed_pixel_uncertainty
  - apply sqrt() factor. Documented in 68789474. git grep -n
    observed_pixel_uncertainty ..
  - Does too little data give smaller residuals? It should. Is this reflected in
    the sqrt() factor?

- mrcal.cameramodel.extrinsics_rt_fromref (and friends): make aliases. I want
  mrcal.cameramodel.rt_cam_ref()

** triangulated features merge